--- a/edit.html
+++ b/edit.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
-  <html>
-     <head>
-        <body>
-    <h3 id="edit-recording">Edit Recording</h4>
-    <h6>Category</h6>
-    <input id="category">
-    <h6>Amount</h6>
-    <input id="amount">
-    <h6>Expense Type</h6>
-    <label><input type="checkbox" id="status">Check if this Expense is Fixed</label>
-    <h6>Date</h6>
-    <input id="date" placeholder="Form: DD/MM/YYYY">
-    <h6>Options</h6>
-    <button id="return">Return</button>
-    <button id="delete">Delete Recording</button>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="css/all.min.css" />
+		<script
+			defer
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+			crossorigin="anonymous"
+		></script>
+		<title>Document</title>
+	</head>
+	<body>
+		<h3 id="edit-recording">Edit Recording</h3>
+		<h6>Category</h6>
+		<input id="category" />
+		<h6>Amount</h6>
+		<input id="amount" />
+		<h6>Expense Type</h6>
+		<label
+			><input type="checkbox" id="status" />Check if this Expense is
+			Fixed</label
+		>
+		<h6>Date</h6>
+		<input id="date" placeholder="Form: DD/MM/YYYY" />
+		<h6>Options</h6>
+		<button id="return">Return</button>
+		<button id="delete">Delete Recording</button>
 
-
-
-
-
-
-
-
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js'></script>
-    <script src='functions.js'></script>
-    <script src='edit.js'></script>
-
-        </body>
-     </head>
-  </html>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js"></script>
+		<script src="functions.js"></script>
+		<script src="edit.js"></script>
+	</body>
+</html>
