--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
 			crossorigin="anonymous"
 		/>
-    <link rel="stylesheet" href="css/all.min.css" >
+		<link rel="stylesheet" href="css/all.min.css" />
 		<script
 			defer
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -23,11 +23,14 @@
 		<h4 id="Create-New-Record">Create New Record</h4>
 		<form id="new-record">
 			<input
+				type="text"
 				id="category-element"
 				placeholder="Set Category (Name)"
 				name="categoryElement"
 			/>
 			<input
+				type="number"
+				step="0.01"
 				id="amount-element"
 				placeholder="Set Amount (currency)"
 				name="amountElement"
