--- a/edit.html
+++ b/edit.html
@@ -33,8 +33,8 @@
 		<h6>Date</h6>
 		<input id="date" placeholder="Form: DD/MM/YYYY" />
 		<h6>Options</h6>
-		<button id="return">Return</button>
-		<button id="delete">Delete Recording</button>
+		<a class="btn btn-primary" href="/index.html">Return</a>
+		<button class="btn btn-danger" id="delete">Delete Recording</button>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js"></script>
 		<script src="functions.js"></script>
